Adjust z-index to avoid example words popups going under the story image

--- a/data/style.css
+++ b/data/style.css
@@ -686,6 +686,9 @@ hr {
 
 .story-image {
     display: inline-block;
+}
+
+.story-image:hover {
     z-index: 3;
 }
 
